// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ResetPasswordForm component should renders correctly in initial state 1`] = `
<form
  noValidate={true}
>
  <Field
    className="elem-mb-SM"
    component={
      Object {
        "$$typeof": Symbol(react.forward_ref),
        "attrs": Array [],
        "componentStyle": ComponentStyle {
          "componentId": "sc-ifAKCX",
          "isStatic": true,
          "rules": Array [
            "
  ",
            "
  position: relative;

  a {
    position: absolute;
    right: 0;
    top: 12px;
  }
",
            ";
",
          ],
        },
        "displayName": "Styled(PasswordField)",
        "foldedComponentIds": Array [],
        "render": [Function],
        "styledComponentId": "sc-ifAKCX",
        "target": [Function],
        "toString": [Function],
        "warnTooManyClasses": [Function],
        "withComponent": [Function],
      }
    }
    dataLocator="login-passwordfield"
    enableSuccessCheck={false}
    errorDataLocator="login-passworderror"
    id="password"
    name="password"
    showSuccessCheck={false}
  />
  <Field
    className="elem-mb-SM"
    component={
      Object {
        "$$typeof": Symbol(react.forward_ref),
        "attrs": Array [],
        "componentStyle": ComponentStyle {
          "componentId": "sc-ifAKCX",
          "isStatic": true,
          "rules": Array [
            "
  ",
            "
  position: relative;

  a {
    position: absolute;
    right: 0;
    top: 12px;
  }
",
            ";
",
          ],
        },
        "displayName": "Styled(PasswordField)",
        "foldedComponentIds": Array [],
        "render": [Function],
        "styledComponentId": "sc-ifAKCX",
        "target": [Function],
        "toString": [Function],
        "warnTooManyClasses": [Function],
        "withComponent": [Function],
      }
    }
    dataLocator="login-passwordfield"
    enableSuccessCheck={false}
    errorDataLocator="login-passworderror"
    id="confirmPassword"
    name="confirmPassword"
    showSuccessCheck={false}
  />
  <Styled(BodyCopy)
    className="elem-mb-LRG"
    color="text.primary"
    component="div"
    fontFamily="primary"
    fontSize={12}
    fontWeight="regular"
    letterSpacing="normal"
    lineHeight="normal"
    textAlign="center"
  >
    <Styled(Button)
      buttonVariation="fixed-width"
      className="elem-mb-XS"
      dataLocator="login-logincta"
      disabled={false}
      fill="BLUE"
      fullWidth={true}
      type="submit"
    />
  </Styled(BodyCopy)>
</form>
`;

exports[`ResetPasswordForm component should renders correctly with success and error 1`] = `
<form
  noValidate={true}
>
  <Styled(BodyCopy)
    className="elem-mb-XL"
    color="green.500"
    component="p"
    fontFamily="primary"
    fontSize="fs12"
    fontWeight="semibold"
    letterSpacing="normal"
    lineHeight="normal"
    textAlign="left"
  >
    success message
  </Styled(BodyCopy)>
  <Styled(BodyCopy)
    className="elem-mb-XL"
    color="red.500"
    component="p"
    fontFamily="primary"
    fontSize="fs12"
    fontWeight="semibold"
    letterSpacing="normal"
    lineHeight="normal"
    textAlign="left"
  >
    error message
  </Styled(BodyCopy)>
  <Field
    className="elem-mb-SM"
    component={
      Object {
        "$$typeof": Symbol(react.forward_ref),
        "attrs": Array [],
        "componentStyle": ComponentStyle {
          "componentId": "sc-ifAKCX",
          "isStatic": true,
          "rules": Array [
            "
  ",
            "
  position: relative;

  a {
    position: absolute;
    right: 0;
    top: 12px;
  }
",
            ";
",
          ],
        },
        "displayName": "Styled(PasswordField)",
        "foldedComponentIds": Array [],
        "render": [Function],
        "styledComponentId": "sc-ifAKCX",
        "target": [Function],
        "toString": [Function],
        "warnTooManyClasses": [Function],
        "withComponent": [Function],
      }
    }
    dataLocator="login-passwordfield"
    enableSuccessCheck={false}
    errorDataLocator="login-passworderror"
    id="password"
    name="password"
    showSuccessCheck={false}
  />
  <Field
    className="elem-mb-SM"
    component={
      Object {
        "$$typeof": Symbol(react.forward_ref),
        "attrs": Array [],
        "componentStyle": ComponentStyle {
          "componentId": "sc-ifAKCX",
          "isStatic": true,
          "rules": Array [
            "
  ",
            "
  position: relative;

  a {
    position: absolute;
    right: 0;
    top: 12px;
  }
",
            ";
",
          ],
        },
        "displayName": "Styled(PasswordField)",
        "foldedComponentIds": Array [],
        "render": [Function],
        "styledComponentId": "sc-ifAKCX",
        "target": [Function],
        "toString": [Function],
        "warnTooManyClasses": [Function],
        "withComponent": [Function],
      }
    }
    dataLocator="login-passwordfield"
    enableSuccessCheck={false}
    errorDataLocator="login-passworderror"
    id="confirmPassword"
    name="confirmPassword"
    showSuccessCheck={false}
  />
  <Styled(BodyCopy)
    className="elem-mb-LRG"
    color="text.primary"
    component="div"
    fontFamily="primary"
    fontSize={12}
    fontWeight="regular"
    letterSpacing="normal"
    lineHeight="normal"
    textAlign="center"
  >
    <Styled(Button)
      buttonVariation="fixed-width"
      className="elem-mb-XS"
      dataLocator="login-logincta"
      disabled={false}
      fill="BLUE"
      fullWidth={true}
      type="submit"
    />
  </Styled(BodyCopy)>
</form>
`;
